--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>QuickMeet - Video Call & Chat</title>
+    <title>MeetFake - Make by TanA and TaiF</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
@@ -19,7 +19,7 @@
     <div class="create-join">
         <div class="text">
             <div class="head">Create Video Meetings in one-click.</div>
-            <div class="subtext">No sign ups required. Open Source platform.</div>
+<!--            <div class="subtext">No sign ups required. Open Source platform.</div>-->
         </div>
         <a th:href="@{/create-room}">
             <button id="createroom" class="createroom-butt unselectable">Create Room</button>
