--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -74,19 +74,19 @@ navbar .logo {
   margin-top: 60px;
   font-size: 24px;
   font-weight: bold;
-  background-color: #4ecca3;
+  background-color: #1a73e8;
   color: white;
   text-align: center;
   padding: 10px 20px;
   border: none;
   border-radius: 10px;
-  border: 2px solid #4ecca3;
+  border: 2px solid #1a73e8;
   transition: 0.3s;
 }
 .main .create-join .createroom-butt:hover {
   background-color: white;
-  border: 2px solid #4ecca3;
-  color: #4ecca3;
+  border: 2px solid #1a73e8;
+  color: #1a73e8;
   cursor: pointer;
 }
 .main .create-join .createroom-butt:focus {
@@ -102,8 +102,8 @@ navbar .logo {
   border: none;
   border-radius: 10px;
   background-color: white;
-  border: 2px solid #4ecca3;
-  color: #4ecca3;
+  border: 2px solid #1a73e8;
+  color: #1a73e8;
 }
 .main .create-join .createroom-clicked:focus {
   outline: none;
@@ -161,7 +161,7 @@ navbar .logo {
   width: 100px;
 }
 .main .video-cont .settings .device {
-  background-color: #4ecca3;
+  background-color: #1a73e8;
   border-radius: 100px;
   padding: 10px;
   width: 40px;
@@ -233,7 +233,7 @@ navbar .logo {
   font-weight: bold;
   padding: 10px;
   width: 90%;
-  border-bottom: 3px solid #4ecca3;
+  border-bottom: 3px solid #1a73e8;
   color: #393e46;
   height: 40px;
 }
@@ -246,7 +246,7 @@ navbar .logo {
   margin-top: 30px;
   color: #ffffff;
   font-weight: bold;
-  background-color: #4ecca3;
+  background-color: #1a73e8;
   padding: 12px 20px;
   border-radius: 10px;
   transition: opacity 0.5s;
@@ -538,7 +538,7 @@ navbar .logo {
   justify-content: center;
 }
 .container-room .left-cont .footer .utils .audio {
-  background-color: #4ecca3;
+  background-color: #1a73e8;
   text-align: center;
   color: white;
   padding: 10px;
@@ -552,7 +552,7 @@ navbar .logo {
   background-color: #393e46;
 }
 .container-room .left-cont .footer .utils .novideo {
-  background-color: #4ecca3;
+  background-color: #1a73e8;
   text-align: center;
   margin-left: 10px;
   color: white;
@@ -622,10 +622,10 @@ navbar .logo {
   display: flex;
 }
 .container-room .left-cont .footer .copycode-cont .roomcode {
-  color: #4ecca3;
+  color: #1a73e8;
   padding: 10px 20px;
   background-color: white;
-  border-bottom: 3px solid #4ecca3;
+  border-bottom: 3px solid #1a73e8;
   font-weight: bold;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
@@ -635,7 +635,7 @@ navbar .logo {
   width: 100px;
   text-align: center;
   color: white;
-  background-color: #4ecca3;
+  background-color: #1a73e8;
   border: none;
   font-weight: bold;
   outline: none;
@@ -710,7 +710,7 @@ navbar .logo {
 }
 .container-room .right-cont .chat-cont .message .info .username {
   font-weight: bold;
-  color: #4ecca3;
+  color: #1a73e8;
 }
 .container-room .right-cont .chat-cont .message .info .time {
   margin-left: 12px;
@@ -739,7 +739,7 @@ navbar .logo {
   font-size: 0.85rem;
   padding: 4px 10px;
   border: none;
-  border-bottom: 3px solid #4ecca3;
+  border-bottom: 3px solid #1a73e8;
   color: #393e46;
 }
 .container-room .right-cont .chat-input-cont .chat-input:focus {
@@ -750,7 +750,7 @@ navbar .logo {
   padding: 5px 20px;
   border: none;
   background-color: white;
-  color: #4ecca3;
+  color: #1a73e8;
   font-weight: bold;
   font-size: 0.85rem;
   border-radius: 2px;
