--- a/src/main/resources/templates/room.html
+++ b/src/main/resources/templates/room.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>QuickMeet Room</title>
+    <title th:text="'MeetFake - ' +${roomId}"></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" th:href="@{/css/style.css}">
@@ -59,14 +59,14 @@
                 <div class="novideo">
                     <i class="fas fa-video"></i>
                 </div>
-                <div class="screenshare tooltip">
-                    <i class="fas fa-desktop"></i>
-                    <span class="tooltiptext">Share Screen</span>
-                </div>
-                <div class="board-icon tooltip">
-                    <i class="fas fa-chalkboard"></i>
-                    <span class="tooltiptext">Whiteboard</span>
-                </div>
+<!--                <div class="screenshare tooltip">-->
+<!--                    <i class="fas fa-desktop"></i>-->
+<!--                    <span class="tooltiptext">Share Screen</span>-->
+<!--                </div>-->
+<!--                <div class="board-icon tooltip">-->
+<!--                    <i class="fas fa-chalkboard"></i>-->
+<!--                    <span class="tooltiptext">Whiteboard</span>-->
+<!--                </div>-->
                 <div class="cutcall tooltip">
                     <i class="fas fa-phone-slash"></i>
                     <span class="tooltiptext">Leave Call</span>
@@ -85,13 +85,9 @@
 
     <div class="right-cont">
         <div class="head-title">
-
             <div class="chats"><i class="fas fa-comment-alt mr-1"></i>Chats</div>
-            <div class="attendies"><i class="fas fa-users mr-1"></i>Attendies</div>
-
-
+<!--            <div class="attendies"><i class="fas fa-users mr-1"></i>Attendies</div>-->
         </div>
-
         <div class="chat-cont">
 
         </div>
