--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -3,7 +3,7 @@
 
 <head>
 		<meta charset="utf-8">
-		<title>Sign In – Swipe</title>
+		<title>Sign In – MeetFake</title>
 		<meta name="description" content="#">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- Bootstrap core CSS -->
@@ -22,7 +22,7 @@
 						<div class="container">
 							<div class="col-md-12">
 								<div class="content">
-									<h1>Sign in to Swipe</h1>
+									<h1>Sign in to MeetFake</h1>
 									<div class="third-party">
 										<button class="btn item bg-blue">
 											<i class="material-icons">pages</i>
@@ -61,7 +61,7 @@
 						<div class="col-md-12">
 							<div class="preference">
 								<h2>Hello, Friend!</h2>
-								<p>Enter your personal details and start your journey with Swipe today.</p>
+								<p>Enter your personal details and start your journey with MeetFake today.</p>
 								<a href="/sign-up" class="btn button">Sign Up</a>
 							</div>
 						</div>
