--- a/src/main/resources/templates/room.html
+++ b/src/main/resources/templates/room.html
@@ -12,14 +12,14 @@
 </head>
 
 <body>
-<div class="overlay" id="overlay">
+<!-- <div class="overlay" id="overlay">
     <div class="box">
         <div class="head-name">Enter a Name</div>
         <input type="text" class="name-field" placeholder="Type here.." id="name-field"></input><br>
         <button class="continue-name">Continue</button>
 
     </div>
-</div>
+</div> -->
 <div class="container-room">
     <div class="left-cont">
 
