--- a/src/main/resources/templates/room.html
+++ b/src/main/resources/templates/room.html
@@ -15,7 +15,7 @@
 <div class="container-room">
     <div class="left-cont">
         <div class="video-cont-single" id="vcont">
-            <div class="video-box">
+            <div class="video-box" id="myVideoSrc">
                 <video class="video-frame" id="vd1" autoplay playsinline>
                 </video>
                 <div class="nametag" id="myname" th:text="${username}">yourname</div>
