--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <title>MeetFake - Make by TanA and TaiF</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" th:href="@{/main/css/style.css}">
+    <link type="text/css" rel="stylesheet" th:href="@{/main/css/style.css}">
     <script src="https://kit.fontawesome.com/6510466b6c.js" crossorigin="anonymous"></script>
 
 </head>
