--- a/src/main/resources/static/main/css/style.css
+++ b/src/main/resources/static/main/css/style.css
@@ -879,12 +879,17 @@ navbar .logo {
 }
 
 .container-room .right-cont .chat-input-cont .ci-cont {
-    width: 80%;
+    width: 70%;
 }
 
 .container-room .right-cont .chat-input-cont .ci-send {
-    width: 20%;
-    margin-left: 20px;
+    width: 10%;
+    margin-left: 5px;
+}
+
+.container-room .right-cont .chat-input-cont .file-send {
+    width: 10%;
+    margin-left: 5px;
 }
 
 .container-room .right-cont .chat-input-cont .chat-input {
@@ -903,7 +908,7 @@ navbar .logo {
 
 .container-room .right-cont .chat-input-cont .chat-send {
     height: 36px;
-    padding: 5px 20px;
+    padding: 5px 15px;
     border: none;
     background-color: white;
     color: #1a73e8;
@@ -952,6 +957,7 @@ navbar .logo {
 }
 
 .container-room .right-cont .chat-cont .attendies .info .username {
+    width: 60%;
     margin-left: 12px;
     font-weight: bold;
     color: rgba(5, 34, 66, 0.79);
@@ -959,6 +965,33 @@ navbar .logo {
     display: flex;
     align-items: center;
 }
+
+.container-room .right-cont .chat-cont .attendies .info .muteMember {
+    width: 10%;
+    font-size: 16px;
+    display: flex;
+    color: rgba(5, 34, 66, 0.79);
+    align-items: center;
+}
+
+.container-room .right-cont .chat-cont .attendies .info .muteMember :hover {
+    color: black;
+    transition: 0.2s;
+}
+
+.container-room .right-cont .chat-cont .attendies .info .banMember {
+    width: 10%;
+    font-size: 16px;
+    display: flex;
+    color: rgba(5, 34, 66, 0.79);
+    align-items: center;
+}
+
+.container-room .right-cont .chat-cont .attendies .info .banMember :hover {
+    color: black;
+    transition: 0.2s;
+}
+
 
 /*end*/
 
@@ -1001,3 +1034,40 @@ navbar .logo {
     opacity: 0.8;
 }
 
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
