--- a/src/main/resources/templates/room.html
+++ b/src/main/resources/templates/room.html
@@ -12,6 +12,18 @@
 </head>
 
 <body>
+    <!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Choose file...</p>
+    <input type="file" name="fileUpload" required/>
+    <button id="btnSendFile">Send</button>
+  </div>
+
+</div>
 <div class="container-room">
     <div class="left-cont">
         <div class="video-cont-single" id="vcont">
@@ -45,7 +57,6 @@
 
         <div class="footer">
             <div class="utils">
-
                 <div class="audio">
                     <i class="fas fa-microphone"></i>
                 </div>
@@ -86,8 +97,11 @@
         </div>
         <div class="chat-input-cont" id="chatInputBox">
             <div class="ci-cont"><input type="text" class="chat-input" placeholder="Type chat here.."></div>
+            <div class="file-send">
+                <button class="chat-send" id="file-upload"><i class="fas fa-paperclip"></i></button>
+            </div>
             <div class="ci-send">
-                <button class="chat-send">Send</button>
+                <button class="chat-send" id="chat-send-text"><i class="fas fa-paper-plane"></i></button>
             </div>
         </div>
         <div class="chat-cont" id="attendiesBox" style="display: none;">
