--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,10 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="text/css" rel="stylesheet" th:href="@{/main/css/style.css}">
     <script src="https://kit.fontawesome.com/6510466b6c.js" crossorigin="anonymous"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
+<div id="preloder"><span class="loader"></span></div>
 <navbar style="display:flex">
     <div class="logo" th:text="'Welcome back '+${fullname}"></div>
     <div style="font-size: 28px;
