--- a/src/main/resources/templates/room.html
+++ b/src/main/resources/templates/room.html
@@ -24,6 +24,7 @@
   </div>
 
 </div>
+<div id="preloder"><span class="loader"></span></div>
 <div class="container-room">
     <div class="left-cont">
         <div class="video-cont-single" id="vcont">
